# fly-in

./: Makefile  README.md  drone_pixel_art.avif  drone_pixel_art.avif:Zone.Identifier  drones.py  fly_in.py  main.py  parsing.py  pyproject.toml  roadmap  testmap.txt
maps/easy/: 01_linear_path.txt  02_simple_fork.txt  errortest.txt
maps/medium/: 03_priority_puzzle.txt
old_display/: drones.py  fly_in.py  path.py  tui_display.py
srcs/: __init__.py  arcade_display.py  big_file.py  color_palette.py  drones.py  main.py  map_data.py  old_tui_display.py  parsing.py  path.py  state.py  testmap.txt  tries.py  tui_display.py  utils.py  zones.py
tests/: sub_testmap.txt  testmap.txt
tests/maps/easy/: 01_linear_path.txt
tests/provided/challenger/: 01_the_impossible_dream.txt
