[tool.poetry]
name = "fly-in"
version = "0.1.0"
description = "a drone routing simulation"
authors = ["ibady"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.12.0"
pyfiglet = "^1.0.4"
arcade = "^3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
